--- a/Dame/Dame.csproj
+++ b/Dame/Dame.csproj
@@ -6,4 +6,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FastExpressionCompiler" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
