--- a/Dame/Dame.csproj
+++ b/Dame/Dame.csproj
@@ -4,10 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <!-- <Optimize>true</Optimize> -->
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="FastExpressionCompiler" Version="2.0.0" />
-  </ItemGroup>
 
 </Project>
