--- a/Dame/Dame.csproj
+++ b/Dame/Dame.csproj
@@ -7,4 +7,8 @@
     <!-- <Optimize>true</Optimize> -->
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SFML.Net" Version="2.5.0" />
+  </ItemGroup>
+
 </Project>
