--- a/Dame/Dame.csproj
+++ b/Dame/Dame.csproj
@@ -11,6 +11,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <!-- <Optimize>true</Optimize> -->
   </PropertyGroup>
 
 </Project>
