Added (albeit crudely implemented) blargg tests.

--- a/Dame.Tests/Dame.Tests.csproj
+++ b/Dame.Tests/Dame.Tests.csproj
@@ -8,9 +8,20 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="moq" Version="4.14.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dame.Emulator\Dame.Emulator.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Binaries\**\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
